# auto_brightness_project

./: .gitignore  CMakeLists.txt  auto_brightness.c  auto_brightness.h  bmp_core.c  bmp_core.h  main.c  report.tex
